--- a/src/pages/PageNotFound/PageNotFound.css
+++ b/src/pages/PageNotFound/PageNotFound.css
@@ -1,25 +1,35 @@
 .page-not-found-wrapper {
-    height: available;
+    padding-top: 32vh;
     display: flex;
-    flex-direction: column;
     justify-content: center;
-    align-content: center;
 }
+
 
 .page-not-found-wrapper__title {
     text-align: center;
     margin: 0 0 10px 0;
-    font-size: 50px;
+    font-size: 75px;
+    font-family: 'Roboto', sans-serif;
+    font-weight: 500;
+    text-transform: uppercase;
+    font-style: normal;
+    color: #4659FF;
 }
 
 .page-not-found-wrapper__description {
     text-align: center;
-    margin: 0 0 10px 0;
-    font-size: 20px;
-    color: black;
+    margin: 0;
+    font-size: 26px;
+    font-family: 'Roboto', sans-serif;
+    font-weight: 500;
+    text-transform: uppercase;
+    font-style: normal;
 }
 
-.page-not-found-wrapper__link {
-    text-align: center;
-    font-size: 21px;
+a {
+    all: unset;
+}
+
+a:hover {
+    cursor: pointer;
 }
