--- a/src/pages/TodoLists/TodoLists.css
+++ b/src/pages/TodoLists/TodoLists.css
@@ -1,11 +1,34 @@
 .lists-content-wrapper {
-    display: flex;
-    justify-content: start;
     height: 100vh;
-    padding: 3vh 1vw;
+    padding: 0 1vw;
     box-sizing: border-box;
 }
 
 .lists-header {
-    border-bottom: solid 1px black;
+    display: flex;
+    justify-content: center;
+    padding: 2vh 0;
+}
+
+.lists-header__greetings {
+    font-family: 'Roboto', sans-serif;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 23px;
+    text-align: center;
+    color: #4659FF;
+    margin: 0;
+    flex: 2;
+}
+
+.lists-header__exit-button {
+    margin-right: 24px;
+    font-family: 'Roboto', sans-serif;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 23px;
+    text-align: center;
+    color: #FF4343;
 }
