--- a/src/pages/TodoLists/ListForm/ListForm.css
+++ b/src/pages/TodoLists/ListForm/ListForm.css
@@ -5,6 +5,8 @@
     border-radius: 36px;
     padding: 17px 26px;
     box-sizing: border-box;
+    margin-bottom: 12px;
+    min-height: 6vh;
 }
 
 .list-form__header {
@@ -23,8 +25,17 @@
     font-size: 20px;
     line-height: 23px;
     border: none;
-    margin-left: 15px;
+    margin-left: 8px;
+    width: 100%;
 }
 .list-form__title:focus {
     outline-width: 0;
 }
+.list-form__title::-webkit-input-placeholder {
+    color: rgba(70, 89, 255, 0.5);
+}
+
+.list-form-button__add-list-item {
+    margin-right: 10px;
+}
+
