--- a/src/pages/TodoLists/TodoLists.css
+++ b/src/pages/TodoLists/TodoLists.css
@@ -21,9 +21,12 @@
     margin: 0;
     flex: 2;
 }
+.lists-header__greetings:hover{
+    cursor: default;
+}
 
 .lists-header__exit-button {
-    margin-right: 24px;
+    margin: 0 24px 0 0;
     font-family: 'Roboto', sans-serif;
     font-style: normal;
     font-weight: 500;
@@ -31,4 +34,11 @@
     line-height: 23px;
     text-align: center;
     color: #FF4343;
+}
+.lists-header__exit-button:hover {
+    cursor: pointer;
+}
+
+#lists-warning-text {
+    margin: 0 0 10px 0;
 }
